Failure to sign in...
Signed-off-by: epikjjh <epikjjh@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -158,4 +158,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# sensitive information
+info.py
+
 # End of https://www.gitignore.io/api/git,linux,python
